<resources>
    <string name="app_name">Paint</string>
    <string name="texto_inicial">Welcome to Paint</string>
    <string name="first_button">Start</string>
    <string name="button_setting">Settings</string>
    <string name="button_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="background_item_setting">Background options</string>
    <string name="item_color">Color</string>
    <string name="about_team_text">Our team</string>
    <string name="catarina">Catarina Lima</string>
    <string name="claudio">Cláudio Lamelas</string>
    <string name="goncalo">Gonçalo Tavares</string>
    <string name="luis">Luís Gonçalves</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tema_Title">Tema</string>
    <string name="tema_option">Modo</string>
    <string name="counter">counter</string>
    <string name="map">Map</string>
    <string name="start_drawing">Start Drawing</string>
    <string name="stop_drawing">Stop Drawing</string>
    <string name="save">Save</string>
    <string name="title_activity_loading">Loading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
<!--    <string name="save">Save</string>-->
    <string name="cancel">Cancel</string>
    <string name="nameForDraw">Name your draw:</string>
    <string name="saved_draws">Saved Draws</string>
    <string name="sure">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
</resources>