<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Team">

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="40dp"
      android:text="@string/about_team_text"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:layout_width="729dp"
      android:layout_height="0dp"
      android:layout_marginStart="1dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="1dp"
      android:layout_marginBottom="1dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/imageView5"
          android:layout_width="80dp"
          android:layout_height="146dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="32dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/woman" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="56dp"
          android:layout_marginTop="151dp"
          android:text="@string/goncalo"
          app:layout_constraintStart_toEndOf="@+id/imageView3"
          app:layout_constraintTop_toBottomOf="@+id/textView5" />

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="80dp"
          android:layout_height="146dp"
          android:layout_marginTop="24dp"
          app:layout_constraintStart_toStartOf="@+id/imageView4"
          app:layout_constraintTop_toBottomOf="@+id/imageView4"
          app:srcCompat="@drawable/man__1_" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="80dp"
          android:layout_height="146dp"
          android:layout_marginTop="24dp"
          android:rotation="0"
          android:scaleX="1"
          android:scaleY="1"
          app:layout_constraintStart_toStartOf="@+id/imageView3"
          app:layout_constraintTop_toBottomOf="@+id/imageView3"
          app:srcCompat="@drawable/man__1_" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="56dp"
          android:layout_marginTop="151dp"
          android:text="@string/claudio"
          app:layout_constraintStart_toEndOf="@+id/imageView4"
          app:layout_constraintTop_toBottomOf="@+id/textView4" />

      <ImageView
          android:id="@+id/imageView4"
          android:layout_width="80dp"
          android:layout_height="146dp"
          android:layout_marginTop="24dp"
          app:layout_constraintStart_toStartOf="@+id/imageView5"
          app:layout_constraintTop_toBottomOf="@+id/imageView5"
          app:srcCompat="@drawable/man__1_" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="56dp"
          android:layout_marginTop="150dp"
          android:text="@string/luis"
          app:layout_constraintStart_toEndOf="@+id/imageView2"
          app:layout_constraintTop_toBottomOf="@+id/textView6" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="60dp"
          android:layout_marginTop="95dp"
          android:text="@string/catarina"
          app:layout_constraintStart_toEndOf="@+id/imageView5"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>