<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Saving">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/saved_draws"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/drawNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deletePopUp"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="70dp"
        android:background="#BEFFF7DC"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/namingTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/ic_launcher_background"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:text="@string/sure"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancelButtonD"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="10dp"
            android:insetTop="4dp"
            android:insetBottom="4dp"
            android:onClick="cancelDeleteCanvas"
            android:text="@string/cancel"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/deleteB"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:insetTop="4dp"
            android:insetBottom="4dp"
            android:onClick="deleteCanvas"
            android:text="@string/delete"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>